name:                crag
version:             0.0.0.2
synopsis:            ACME Library
-- description:         
homepage:            https://git.hemio.de/hemio/crag
license:             LGPL-3
license-file:        LICENSE
author:              Sophie Herold
maintainer:          sophie@hemio.de
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.20

library
  default-extensions:
    DeriveDataTypeable,
    DeriveGeneric,
    FlexibleContexts,
    OverloadedStrings,
    RecordWildCards,
    TemplateHaskell
  exposed-modules:
    Network.ACME
    Network.ACME.Errors
    Network.ACME.HTTP
    Network.ACME.Internal
    Network.ACME.JWS
    Network.ACME.Types
  build-depends:
    base >=4.8 && <4.10,
    aeson,
    bytestring,
    case-insensitive,
    http-client,
    http-client-tls >= 0.3.5,
    http-conduit,
    http-types,
    jose >= 0.6,
    lens,
    lifted-base,
    network,
    network-uri,
    time,
    transformers,
    template-haskell,
    x509
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates

test-suite crag-unit
  default-extensions:
    OverloadedStrings
  default-language:    Haskell2010
  type:       exitcode-stdio-1.0
  main-is:    test/crag-unit.hs
  hs-source-dirs: .    test
  build-depends:
    crag,
    base >=4.8 && <4.10,
    aeson,
    bytestring,
    transformers,
    -- test
    file-embed,
    tasty,
    tasty-hunit,
    -- dev
    hindent
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates

test-suite crag-integration
  default-extensions:
    OverloadedStrings
  default-language:    Haskell2010
  type:       exitcode-stdio-1.0
  main-is:    test/crag-integration.hs
  hs-source-dirs: . test
  other-modules: TestIntegration
  build-depends:
    crag,
    base >=4.8 && <4.10,
    aeson,
    bytestring,
    connection,
    data-default,
    http-client,
    http-client-tls >= 0.3.5,
    http-conduit,
    http-types,
    network,
    network-uri,
    transformers,
    yaml,
    -- test
    file-embed,
    tasty,
    tasty-hunit,
    pkcs10,
    pem,
    cryptonite,
    x509,
    pem,
    warp,
    wai,
    -- hindent dep. fix
    haskell-src-exts < 1.20,
    -- dev
    hindent,
    hlint > 2
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates

