name:                crag
version:             0.0.0.2
synopsis:            ACME Library
-- description:         
homepage:            https://git.hemio.de/hemio/crag
license:             LGPL-3
license-file:        LICENSE
author:              Sophie Herold
maintainer:          sophie@hemio.de
-- copyright:           
category:            Web
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.20

library
  default-extensions:
    FlexibleInstances,
    OverloadedStrings,
    TemplateHaskell
  exposed-modules:
    Network.ACME
    Network.ACME.Error
    Network.ACME.HTTPS
    Network.ACME.HTTPS.Internal
    Network.ACME.Internal
    Network.ACME.JWS
    Network.ACME.Object
    Network.ACME.Type
  build-depends:
    base,
    aeson,
    bytestring,
    case-insensitive,
    data-default-class,
    http-client,
    http-client-tls >= 0.3.5,
    http-types,
    jose >= 0.6,
    lens,
    mtl,
    network,
    network-uri,
    pem,
    template-haskell,
    text,
    time,
    x509
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates

test-suite crag-unit
  default-extensions:
    OverloadedStrings
  default-language:    Haskell2010
  type:       exitcode-stdio-1.0
  main-is:    test/crag-unit.hs
  hs-source-dirs: .    test
  build-depends:
    crag,
    base,
    aeson,
    bytestring,
    transformers,
    -- test
    file-embed,
    tasty,
    tasty-hunit
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates

test-suite crag-integration
  default-extensions:
    OverloadedStrings
  default-language:    Haskell2010
  type:       exitcode-stdio-1.0
  main-is:    test/crag-integration.hs
  hs-source-dirs: . test
  other-modules: TestIntegration
  build-depends:
    crag,
    base,
    aeson,
    bytestring,
    connection,
    cryptonite,
    http-client,
    http-client-tls >= 0.3.5,
    http-types,
    mtl,
    pem,
    pem,
    pkcs10,
    process,
    x509,
    yaml,
    -- temp, should be removed
    jose,
    -- test
    tasty,
    tasty-hunit,
    -- webserver
    warp,
    wai,
    -- code formatting/quality
    hindent == 5.3.*,
    hlint > 2
  ghc-options:
    -Wall
    -Wcompat
    -Wincomplete-record-updates

